# astronomical-medicine

./: .hgignore  ==README==.txt  CMakeLists.txt  Intro.md  LICENSE.txt  NOTES.txt  ProjectHome.md  README.md  fexstrude  fits2itk.cxx  itkFITSImageIO.cxx  itkFITSImageIO.h  itkFITSImageIOFactory.cxx  itkFITSImageIOFactory.h  itkFITSImageUtils.cxx  itkFITSImageUtils.h  itkFITSImageUtils.txx  itkFITSWCSTransform.cxx  itkFITSWCSTransform.h  itkFITSWCSTransform.txx  itkMakeNaNMaskFilter.h  shortUsageMessage.txt  slicerModuleDescription.xml  verboseUsageMessage.txt  version.cxx
.svn/: dir-wcprops  entries
.svn/text-base/: CMakeLists.txt.svn-base  fits2itk.cxx.svn-base  itkFITSImageIO.cxx.svn-base  itkFITSImageIO.h.svn-base
.svn/wcprops/: CMakeLists.txt.svn-work  fits2itk.cxx.svn-work  itkFITSImageIO.cxx.svn-work  itkFITSImageIO.h.svn-work  itkFITSImageIOFactory.cxx.svn-work  itkFITSImageIOFactory.h.svn-work
cfitsio/: CMakeLists.txt
cfitsio/.svn/: dir-wcprops  entries
cfitsio/.svn/wcprops/: CMakeLists.txt.svn-work  License.txt.svn-work  README.MacOS.svn-work  README.svn-work  README.win32.svn-work  buffers.c.svn-work  cfileio.c.svn-work  cfortran.h.svn-work  checksum.c.svn-work  compress.c.svn-work  compress.h.svn-work  compress_alternate.c.svn-work  cookbook.c.svn-work  drvrfile.c.svn-work  drvrmem.c.svn-work  drvrnet.c.svn-work  drvrsmem.c.svn-work  drvrsmem.h.svn-work  editcol.c.svn-work  edithdu.c.svn-work  eval_defs.h.svn-work  eval_f.c.svn-work  eval_l.c.svn-work  eval_tab.h.svn-work  eval_y.c.svn-work  f77_wrap.h.svn-work  f77_wrap1.c.svn-work  f77_wrap2.c.svn-work  f77_wrap3.c.svn-work  f77_wrap4.c.svn-work  fitscopy.c.svn-work  fitscore.c.svn-work  fitsio.h.svn-work  fitsio2.h.svn-work  getcol.c.svn-work  getcolb.c.svn-work  getcold.c.svn-work  getcole.c.svn-work  getcoli.c.svn-work  getcolj.c.svn-work  (+55 more)
cfitsio/delete-me/: Makefile  cmake_install.cmake
da_util/: CMakeLists.txt  RcPointer.cxx  RcPointer.h  da_pure_sugar.h  da_sugar.h  da_usual.cxx  da_usual.h  da_util.cxx  da_util.h
da_util/.svn/: dir-wcprops
da_util/.svn/wcprops/: CMakeLists.txt.svn-work  da_usual.cxx.svn-work
fits2itk_da_util/: CMakeLists.txt  LICENSE.txt  RcPointer.cxx  da_usual.h
fits2itk_da_util/.svn/: entries
fits2itk_da_util/.svn/text-base/: CMakeLists.txt.svn-base  da_pure_sugar.h.svn-base  da_usual.cxx.svn-base  da_usual.h.svn-base
fits2itk_da_util/.svn/wcprops/: da_pure_sugar.h.svn-work  da_sugar.h.svn-work  da_usual.h.svn-work
fits2itk_libwcs/: CMakeLists.txt
libwcs/: CMakeLists.txt  Makefile  cmake_install.cmake  fitshead.h
libwcs/.svn/: entries
pathToExecutable/: CMakeLists.txt  getpath.c.dist  pathToExecutable.c  pathToExecutable.h
