project(cfitsio)

ADD_DEFINITIONS(
  -DHAVE_STDLIB_H=1
  -DHAVE_STRING_H=1
  -DHAVE_MATH_H=1
  -DHAVE_LIMITS_H=1
  -D_LARGEFILE_SOURCE=1
  -D_FILE_OFFSET_BITS=64
  -DHAVE_FTRUNCATE=1
  -DHAVE_LONGLONG=1
  -DHAVE_SHMEM_SERVICES=1
  -DHAVE_UNION_SEMUN=1
  -DHAVE_NET_SERVICES=1
  )

set(cfitsio_source_files
  buffers.c
  cfileio.c
  checksum.c
  compress.c
  compress_alternate.c
  cookbook.c
  drvrfile.c
  drvrmem.c
  drvrnet.c
  drvrsmem.c
  editcol.c
  edithdu.c
  eval_f.c
  eval_l.c
  eval_y.c
  f77_wrap1.c
  f77_wrap2.c
  f77_wrap3.c
  f77_wrap4.c
  fitscopy.c
  fitscore.c
  getcol.c
  getcolb.c
  getcold.c
  getcole.c
  getcoli.c
  getcolj.c
  getcolk.c
  getcoll.c
  getcols.c
  getcolsb.c
  getcolui.c
  getcoluj.c
  getcoluk.c
  getkey.c
  group.c
  grparser.c
  histo.c
  imcompress.c
  imcopy.c
  iraffits.c
  iter_a.c
  iter_b.c
  iter_c.c
  iter_image.c
  iter_var.c
  listhead.c
  modkey.c
  pliocomp.c
  putcol.c
  putcolb.c
  putcold.c
  putcole.c
  putcoli.c
  putcolj.c
  putcolk.c
  putcoll.c
  putcols.c
  putcolsb.c
  putcolu.c
  putcolui.c
  putcoluj.c
  putcoluk.c
  putkey.c
  quantize.c
  region.c
  ricecomp.c
  scalnull.c
  smem.c
  speed.c
  swapproc.c
  testprog.c
  wcssub.c
  wcsutil.c
  wcsutil_alternate.c
  )

add_library(itkcfitsio ${cfitsio_source_files})

if(ITK_LIBRARY_PROPERTIES)
  set_target_properties(itkcfitsio PROPERTIES ${ITK_LIBRARY_PROPERTIES})
endif(ITK_LIBRARY_PROPERTIES)
